# raiseHack

./: .env.example  .gitignore  ARCHITECTURE.md  HACKATHON_PLAN.md  PRD  README.md  ngrok.yml.example  package-lock.json  package.json  requirements.txt
.cursor/plans/: meeting_agent_phase_0_1932fea6.plan.md
.github/workflows/: ci.yml
agents/angie/: SKILL.md
agents/angie-instant/: SKILL.md
agents/meeting-router/: SKILL.md
agents/nikki/: SKILL.md
agents/olaf/: SKILL.md
agents/speech/: SKILL.md
agents/speech-editor/: SKILL.md
apps/api/: package.json  tsconfig.json
apps/web/: next.config.ts  package.json
backend/: main.py  meet_urls.py  pyproject.toml  sessions.py  ws_worker.py
docs/: AUDIO_SETUP.md
mock-incident/: INCIDENT.md  reset_bug.py
mock-incident/app/: checkout.py
orders/: index.html
scripts/: run-all.sh
speech/: agent_context.py  angie_instant_client.py  audio_io.py  audio_output.py  cursor_cloud_client.py  guard.py  invoke_scheduler.py  meet_audio.py  meet_link.py  meeting_session.py  meeting_sim.py  nikki_client.py  olaf_client.py  orchestrator.py  partial_scheduler.py  resample.py  router_heuristic.py  speech_editor.py  ssl_context.py  stt.py  triggers.py  tts.py
web/: .env.local.example  .gitignore  next.config.mjs  package-lock.json  package.json
web/app/: globals.css  (+2 more)
worker/: .env.example  audio_router.py  config.py  gemini_live_client.py  list_models.py  main.py  meet_controller.py  meet_urls.py  pyproject.toml  run_meeting_sim.py  speech_bridge.py  status.py  verify_audio.py  verify_cursor.py  websocket_client.py
(+48 files in other folders)
