[project]
name = "meeting-agent-backend"
version = "0.1.0"
description = "FastAPI backend for the Meeting Computer Agent (Phase 0)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.50.0",
    "pydantic>=2.13.4",
    "websockets>=16.0",
]

[tool.uv]
package = false
