[project]
name = "meeting-agent-worker"
version = "0.1.0"
description = "Dedicated worker for the Meeting Computer Agent (Phase 0): join Meet, hear, speak"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.16.1",
    "playwright>=1.49.1",
    "sounddevice>=0.5.1",
    "numpy>=2.2.1",
    "websockets>=16.0",
]

[tool.uv]
package = false
